# highway-mcp

./: .gitignore  README.md  eval_agent.py  pyproject.toml
deploy/: highway-mcp.service  mcp.highway.rodmena.app.conf
highway_mcp/: __init__.py  server.py
web/: connect-gmail.html  index.html
