[project]
name = "highway-mcp"
version = "0.1.0"
description = "MCP front door for Highway Agents: drive durable, always-on agents from any MCP host."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
highway-mcp = "highway_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["highway_mcp"]
